 * #2255 (The description of a Distribution is wrong)
 * #2268 (MeixnerDistribution: slow pdfgradient)
 * #2274 (Basis accepts functions with different input (output) dimensions)
 * #2281 (The marginal of FireSatelliteModel can fail)
 * #2285 (The input and output descriptions does not go down to the metamodel)
 * #2287 (DesignProxy.computeDesign() can produce a segmentation fault)
 * #2297 (Legend location with grid layout)
 * #2299 (Allow openturns as subproject)
 * #2306 (Dirichlet::computeConditionalPDF can produce NaNs and Infs)


== 1.20 release (2022-11-08) == #release-1.20

=== Library ===

==== New classes ====
 * IndependentCopulaFactory
 * FieldToPointFunctionalChaosAlgorithm (openturns.experimental)
 * FieldFunctionalChaosResult (openturns.experimental)
 * FieldFunctionalChaosSobolIndices (openturns.experimental)
 * CorrelationAnalysis
 * UserDefinedMetropolisHastings (openturns.experimental)
 * QuantileMatchingFactory
 * UniformMuSigma

==== API changes ====
 * Removed coupling_tools.execute get_stderr,get_stdout arguments
 * Removed deprecated Nlopt|Ceres|Bonmin|CMinpack|Ipopt|TBB|HMatrixFactory::IsAvailable methods
 * Deprecated SequentialStrategy
 * Deprecated TensorApproximationAlgorithm, TensorApproximationResult, CanonicalTensorEvaluation, CanonicalTensorGradient
 * Deprecated FunctionalChaosSobolIndices.getSobolGrouped(Total)Index(int)
 * Deprecated static CorrelationAnalysis::PearsonCorrelation|SpearmanCorrelation|PCC|PRCC, use the methods of the new CorrelationAnalysis class instead.
 * Removed static CorrelationAnalysis::SRC|SRRC due to a bug: #1753.
 * Deprecated Distribution::getStandardMoment
 * Inverted ctors arguments order in LinearModelAlgorithm & LinearModelStepwiseAlgorithm : first sample, then basis
 * Deprecated oldest LinearModelAlgorithm(X, basis, Y) and LinearModelStepwiseAlgorithm(X, basis, Y,...) ctors
 * Deprecated FunctionalChaos(Function, ...) ctors
 * Deprecated MetaModelResult(Function, Function, ...) ctor